[package]
name = "rust-axum-intro"
version = "0.1.0"
edition = "2021"
authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Rust Axum Full Course code."
homepage = "https://youtu.be/XZtlD_m59sM"
repository = "https://github.com/rust-httpc-test"

[workspace.lints.rust]
unsafe_code = "forbid"
unused = "allow" # For experimental dev.

[lints]
workspace = true

[dependencies]
# -- Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
# -- Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
# -- Web
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"] }
tower-cookies = "0.10"
# -- Others
lazy-regex = "3"
strum_macros = "0.25"
uuid = {version = "1", features = ["v4","fast-rng",]}


[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"